--- a/app/src/main/res/layout/weather_screen_layout.xml
+++ b/app/src/main/res/layout/weather_screen_layout.xml
@@ -59,6 +59,7 @@
 
             <ImageView
                 android:id="@+id/imageView"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.7"
                 app:srcCompat="@drawable/testimg" />
