--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#29b6f6</color>
+    <color name="colorPrimaryDark">#0086c3</color>
+    <color name="colorPrimaryLight">#c873e8ff</color>
+    <color name="colorSecondary">#ff9800</color>
+    <color name="colorSecondaryDark">#c66900</color>
+    <color name="colorSecondaryLight">#ffc947</color>
+    <color name="colorText">#000000</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorBackground">#eeeeee</color>
+    <color name="colorTextDegrees">#546e7a</color>
+    <color name="test">#ffffff</color>
+
 </resources>
