--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="colorBackground">#eeeeee</color>
     <color name="colorTextDegrees">#546e7a</color>
     <color name="test">#ffffff</color>
+    <color name="control_background">#cc4285f4</color>
 
 </resources>
